--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
 	</title>
 	<style>
 body {
-    -webkit-transform: scale(0.8);
-       -moz-transform: scale(0.8);
-            transform: scale(0.8);
 	background-color: gray;
 			}
 	
@@ -24,8 +21,8 @@ body {
 
 #game {
 	border: solid;
-	margin-left: 650px;
-	margin-bottom: -800px;
+	margin-top: 100px;
+	margin: auto;
 }
 	</style>
 	
